fix: buttons, perfs, light flickering on limit cases

--- a/src/style.css
+++ b/src/style.css
@@ -66,8 +66,11 @@ body {
 }
 
 .weather-btn.selected {
+	border: 2px solid white;
+	border-radius: 100%;
+	background: white;
 	transform: scale(1.05);
-	filter: drop-shadow(0 0 4px rgba(255, 255, 255, 0.8)) drop-shadow(0 15px 40px rgba(0, 0, 0, 0.4));
+	filter: drop-shadow(0 0 0 rgba(255, 255, 255, 0.8)) drop-shadow(0 15px 40px rgba(0, 0, 0, 0.4));
 }
 
 .weather-btn svg {
